# khun-phaen-tracker-offline

./: .gitignore  Dockerfile.frontend  README.md  docker-compose.yml  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy-gh-pages.yml  deploy.yml
.storybook/: main.ts  preview.ts
_app/: version.json
_app/immutable/assets/: 0.D1BLR95S.css  0.DmTJpxBq.css  2.DZCcLR0_.css  tldrawBridge.ZLBtLSDh.css
_app/immutable/chunks/: 4mWqcc1M.js  B02ia0Aj.js  BqvQHO2A.js  C80ghDrP.js  C9bkB8bM.js  CFJ7duGK.js  CSMc7PFl.js  CkT-NYDV.js  CnSn0TD3.js  CrlWeLv3.js  D_fMIqH3.js  Dq0lIqdU.js  E1jRH0WK.js  PFMd4E_e.js  WbimEUHl.js  exSN_Lgd.js  w-wF2KBr.js
_app/immutable/entry/: app.BGoglEeG.js  app.CZBUasGt.js  start.BbcQCVcH.js  start.BgAF9vWh.js
_app/immutable/nodes/: 0.Cn-UMajm.js  0.DFBDT3rw.js  1.CYGeU3Qx.js  1.sVUQcjI_.js  2.CZSBzsiu.js  2.fpw6FMQL.js
_app/immutable/workers/: sqlite3-opfs-async-proxy--d6widYe.js  sqlite3-worker1-Bv1swYna.js
src/: app.css  app.html
src/lib/: db.ts  db.unit.test.ts  types.ts
src/lib/components/: AssigneeSelector.svelte  BranchDialog.svelte  ChecklistManager.svelte  CustomDatePicker.stories.svelte  CustomDatePicker.svelte  DevTimer.svelte  (+28 more)
src/routes/: +layout.svelte  +page.svelte
sync-server/: .gitignore  Cargo.toml  Dockerfile  README.md
sync-server/src/: main.rs
tests/: today-filter.test.ts
wasm-compress/: Cargo.toml
wasm-compress/src/: lib.rs
wasm-crdt/: Cargo.toml
wasm-crdt/src/: lib.rs
wasm-search/: .gitignore  Cargo.toml
wasm-search/src/: lib.rs
(+17 files in other folders)
