[package]
name = "wasm-compress"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.65"
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
